k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started-app-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getting-started-app-2
  template:
    metadata:
      labels:
        app: getting-started-app-2
    spec:
      containers:
        - name: getting-started-app-2
          image: 148761641074.dkr.ecr.ap-south-1.amazonaws.com/assignment
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /etc/todos
              name: data

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-dynamic
