k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getting-started-app-service-2
spec:
  selector:
    app: getting-started-app-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
